// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimStatus renders for Scenario1 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      We need to confirm your eligibility for benefits.
    </h3>
    <div
      className="claim-status-extra-info"
    >
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      More text.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario7 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      There are no pending issues at this time.
    </h3>
    <div
      className="claim-status-extra-info"
    >
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      More text.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario8 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Your claim is active and there are no pending issues at this time.
    </h3>
    <div
      className="claim-status-extra-info"
    >
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      More text.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario9 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      Your payments are pending further review.
    </h3>
    <div
      className="claim-status-extra-info"
    >
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      More text.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ClaimStatus renders for Scenario10 1`] = `
<div
  className="claim-status claim-section"
>
  <h2>
    Claim Status
  </h2>
  <div
    className="pending-status claim-subsection"
  >
    <h3
      className="header-line"
    >
      [this copy may or may not be unique] Your payments are pending further review.
    </h3>
    <div
      className="claim-status-extra-info"
    >
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      Placehold text to talk more about the status of your claim with some verbosity.
      <br />
      More text.
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      Your Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
  <div
    className="next-steps claim-subsection"
  >
    <h3
      className="next-steps-header"
    >
      EDD Next Steps
    </h3>
    <div
      className="next-step-explanation"
    >
      <ul>
        <li
          className="next-step"
        >
          a very very very very very very very very very very very very very very very very very very very very very very very very very very very long bullet
        </li>
        <li
          className="next-step"
        >
          another step with longer text
        </li>
        <li
          className="next-step"
        >
          a third bullet
        </li>
        <li
          className="next-step"
        >
          another very very very very very very very very very very very very very very very very very very very very very very very very very very very long other bullet
        </li>
      </ul>
    </div>
  </div>
</div>
`;
